Spring Data JPA 2 : One-to-Many

--- a/src/main/resources/templates/schools.html
+++ b/src/main/resources/templates/schools.html
@@ -25,9 +25,7 @@
   }
 </style>
 <body>
-<h3>School</h3>
-<a href="/school">Add a new school !</a>
-<br><br>
+<h1>School</h1>
 <table>
   <thead>
   <tr>
@@ -35,7 +33,6 @@
     <th>Name</th>
     <th>Capacity</th>
     <th>Country</th>
-    <th></th>
     <th></th>
   </tr>
   </thead>
@@ -45,12 +42,9 @@
     <td th:text="${school.name}">name</td>
     <td th:text="${school.capacity}">capacity</td>
     <td th:text="${school.country}">country</td>
-    <td><a th:href="@{/school(id=${school.id})}">Edit</a></td>
-    <td><a th:href="@{/school/delete(id=${school.id})}">Remove</a></td>
+    <td><a th:href="@{/school/register(idSchool=${school.id})}">registration</a></td>
   </tr>
   </tbody>
 </table>
-<br>
-<a href="/static">Return to the index</a>
 </body>
 </html>
